# codeoid-ui

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  codecov.yml  release-plz.toml
.config/: nextest.toml
.github/workflows/: ci.yml  gemini-review.yml  release-plz.yml  release.yml
crates/codeoid-client/: CHANGELOG.md  Cargo.toml
crates/codeoid-client/examples/: headless.rs
crates/codeoid-client/src/: auth.rs  config.rs  connection.rs  error.rs  lib.rs  request.rs
crates/codeoid-protocol/: CHANGELOG.md  Cargo.toml
crates/codeoid-protocol/src/: client.rs  daemon.rs  lib.rs  message.rs  session.rs  tool.rs
crates/codeoid-protocol/tests/: roundtrip.rs  wire_format.rs
crates/codeoid-tui/: CHANGELOG.md  Cargo.toml
crates/codeoid-tui/src/: app.rs  event.rs  keymap.rs  main.rs
crates/codeoid-tui/src/commands/: mod.rs
crates/codeoid-tui/src/render/: ansi.rs  markdown.rs  mod.rs  parts.rs  sanitize.rs  spinner.rs  tool.rs  wrap.rs
crates/codeoid-tui/src/state/: messages.rs  mod.rs  render_cache.rs  scrollback_build.rs  sessions.rs
crates/codeoid-tui/src/ui/: approval.rs  hints.rs  mod.rs  modal.rs  prompt.rs  scrollback.rs  status.rs  tabs.rs  worker.rs
